--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ node_modules
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -20,6 +21,7 @@ node_modules
 .env.test.local
 .env.production.local
 .env
+.sqlite
 
 npm-debug.log*
 yarn-debug.log*
