--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "SET NODE_ENV=dev & nodemon src/index.ts",
-        "prod": "NODE_ENV=prod nodemon src/index.ts"
+        "build": "npx tsc",
+        "prod": "SET NODE_ENV=prod & node dist/index.js"
     },
     "keywords": [],
     "author": "",
@@ -22,6 +23,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.2",
         "sequelize": "^6.37.1",
+        "sequelize-cli-typescript": "^3.2.0-c",
         "sequelize-typescript": "^2.1.6",
         "sqlite3": "^5.1.7",
         "ts-node": "^10.9.2",
@@ -38,6 +40,8 @@
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.30",
         "nodemon": "^3.1.0",
+        "sequelize-mig": "^3.1.3",
+        "sequelize-typescript-migration": "^0.0.1-beta.3",
         "tslint": "^6.1.3"
     },
     "description": ""
