--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,12 @@ services:
     api:
         build:
             context: .
-            dockerfile: Dockerfile
+            dockerfile: ./Docker/api/Dockerfile
         ports:
             - '5000:5000'
+    frontend:
+        build:
+            context: .
+            dockerfile: ./Docker/frontend/Dockerfile
+        ports:
+            - '80:3000'
