--- a/Docker/frontend/Dockerfile
+++ b/Docker/frontend/Dockerfile
@@ -6,7 +6,8 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY ./frontend/package*.json ./
 COPY ./frontend/tsconfig.json ./
-COPY ./fromtend/src ./src
+COPY ./frontend/src ./src
+COPY ./frontend/public ./public
 
 
 
